sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:23: error: not found: value l
      echange(l+1,j);
              ^